--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1461,7 +1461,7 @@ it:
         processing: "In attesa..."
         loading_image: Caricamento...
         image_uploading_in_progress: "Caricamento immagine..."
-        processing_takes_a_while: "Tutte le immagine sono state caricate! Ci vorrà un po' di tempo per finire il processo, comunque puoi già l'inserzione ed uscire se lo desideri."
+        processing_takes_a_while: "Tutte le immagine sono state caricate! Ci vorrà un po' di tempo per finire il processo, comunque puoi già salvare l'inserzione ed uscire se lo desideri."
         this_may_take_a_while: "(potrebbe richiedere del tempo)"
         percentage_loaded: ~
         uploading_failed: "Il caricamento dell'immagine non è andato a buon fine."
